infra/manifests/esphome/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: esphome
  labels:
    istio.io/dataplane-mode: ambient
